--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/babel__traverse": "^7.18.5",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
@@ -19,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.2.0",
+    "stream-browserify": "^3.0.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
